<resources>
    <string name="app_name">RentCar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="user">USERNAME</string>
    <string name="pass">PASSWORD</string>
    <string name="Login_User" />
    <string name="Login_Pass">Password</string>

    <string name="rent_text">RENT A CAR</string>
    <string name="Go_text">GO</string>
    <string name="AboutMe_text">AboutMe</string>
    <string name="Back_text">BACK</string>
    <string name="Name_text">NAME : PUVIS TEEWEANG</string>
    <string name="Email_text">EMAIL: 59161111@gmail.com</string>
    <string name="Phone_text">EPHONE: 0927041174</string>

    <string name="Detail_text">DETAIL</string>
    <string name="Input_text">INPUT YOUR NAME</string>
    <string name="Save_text">SAVE</string>

    <string name="Num1_text">1</string>
    <string name="Num2_text">2</string>

</resources>
